Protocol excluded from website api validation (but referer protocol must be http or https).

--- a/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/ExternalApplication.cshtml
+++ b/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/ExternalApplication.cshtml
@@ -42,7 +42,7 @@
                 break;
 
             case "Website":
-                $("#@Html.FieldIdFor(m => m.ApiKey)").attr("placeholder", "@T("Website urls, separated by comma")");
+                $("#@Html.FieldIdFor(m => m.ApiKey)").attr("placeholder", "@T("Website urls, separated by comma. Each entry must start with its protocol (e.g.: 'http://')")");
                 $("#@genKeyDivId").hide();
                 break;
 
