--- a/src/Modules/Laser.Orchard.PaymentGateway/Views/PaymentInfo/Index.cshtml
+++ b/src/Modules/Laser.Orchard.PaymentGateway/Views/PaymentInfo/Index.cshtml
@@ -30,6 +30,10 @@
                 else {
                     if (string.IsNullOrWhiteSpace(rec.PosName)) {
                         outcome = T("Abandoned").ToString();
+                    } else {
+                        if (string.IsNullOrWhiteSpace(rec.Error) && string.IsNullOrWhiteSpace(rec.TransactionId)) {
+                            outcome = T("Waiting for payment").ToString();
+                        }
                     }
                 }
                 <tr>
