Added "Waiting for transaction info" string when payment is succeeded but there is no transaction id.

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/Order.PaymentInfo.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/Order.PaymentInfo.cshtml
@@ -48,7 +48,11 @@
                 @if (Model.Success) {
                     <tr>
                         <td width="20%">@T("Outcome")</td>
-                        <td><span>@T("Succeeded")</span></td>
+                        @if (string.IsNullOrWhiteSpace(Model.TransactionId)) {
+                            <td><span>@T("Waiting for transaction info")</span></td>
+                        } else {
+                            <td><span>@T("Succeeded")</span></td>
+                        }
                     </tr>
                     <tr>
                         <td width="20%">@T("Transaction ID")</td>
