Cookie management provider to manage cookie permissions outside the CookieLawPart. Added providers for Cookie Cutter (current Laser implementation) and CookieBot (based on its cookie format).

--- a/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
+++ b/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
@@ -33,9 +33,10 @@
     var isPolicyPage = Model.isPolicyPage;
 
     using (Script.Head()) {
-        foreach (var cookie in gdprScriptService.GetAllowedCookies()) {
+        // Header script injection isn't implemented here anymore, it must be managed by a proper filter (e.g. GoogleAnalyticsFilter)
+        @*foreach (var cookie in gdprScriptService.GetAllowedCookies()) {
             <text>@Html.Raw(cookie.GetHeadScript(gdprScriptService.GetAcceptedCookieTypes())) </text>
-        }
+        }*@
 
         var technicalCookies = Html.Raw(Json.Encode(_defaultCookieProvider.GetTechnicalCookies()));
         var preferencesCookies = Html.Raw(Json.Encode(_defaultCookieProvider.GetPreferencesCookies()));
