--- a/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
+++ b/src/Modules/Laser.Orchard.Cookies/Views/Parts/CookieLaw.cshtml
@@ -131,8 +131,8 @@
             </script>
         }
 
-        foreach (var cookie in gdprScriptService.GetAllowedCookies()) {
+        @*foreach (var cookie in gdprScriptService.GetAllowedCookies()) {
             <text>@Html.Raw(cookie.GetFootScript(gdprScriptService.GetAcceptedCookieTypes())) </text>
-        }
+        }*@
     }
 }
