--- a/src/Modules/Laser.Orchard.Maps/Views/GoogleMapForProjections.cshtml
+++ b/src/Modules/Laser.Orchard.Maps/Views/GoogleMapForProjections.cshtml
@@ -76,6 +76,8 @@
     </script>
         }
     <fieldset class="map">
+        @* data-map-provider and data-map-id attributes are needed to properly initialize the map via the Google Maps Api callback 
+            that looks for the "initializeSuffix" function (data-map-id value is the Suffix for the function name). *@
         <div class="map-canvas" data-map-provider="google" data-map-id="@ID" id="map_canvas-@ID">
         </div>
     </fieldset>
