--- a/src/Themes/Lasergroup/Views/Parts/Map-MapWidget.cshtml
+++ b/src/Themes/Lasergroup/Views/Parts/Map-MapWidget.cshtml
@@ -31,12 +31,13 @@
 @if (Model.Latitude > 0) {
     using (Script.Foot()) {
     <script type="text/javascript">
-        function @("initialize" + ID + "()") {
+        async function @("initialize" + ID + "()") {
+            const { Map } = await google.maps.importLibrary("maps");
             var mapOptions = {
             scaleControl: true,
             center: new google.maps.LatLng(@Model.Latitude.ToString().Replace(",", "."),@Model.Longitude.ToString().Replace(",", ".")),
                 zoom: 15,
-                mapTypeId: @Html.Raw(!httpTiles ? usedTiles : "'OSM'")   
+                mapTypeId: @Html.Raw(!httpTiles ? usedTiles : "'OSM'")
 
             @if (httpTiles) {
                 <text>,
@@ -46,7 +47,7 @@
             }
         };
 
-        var map = new google.maps.Map(document.getElementById('map_canvas-@ID'),
+        var map = new Map(document.getElementById('map_canvas-@ID'),
     mapOptions);
                     @if (httpTiles) {
                         //Define OSM map type pointing at the OpenStreetMap tile server
@@ -57,7 +58,7 @@
                 var values = [zoom,coord.x,coord.y];
 
                 var result = switch_url(format(usedTilesJS, zoom, coord.x, coord.y));
-                    
+
                 return result; //"http://tile.openstreetmap.org/" + zoom + "/" + coord.x + "/" + coord.y + ".png";
             },
             tileSize: new google.maps.Size(256, 256),
@@ -86,7 +87,8 @@
         });
         }
 
-        google.maps.event.addDomListener(window, 'load', @("initialize" + ID) );
+        @("initialize" + ID + "();")
+        //google.maps.event.addDomListener(window, 'load', @("initialize" + ID) );
     </script>
     }
     <div class="col-xs-12 col-sm-6">
