--- a/src/Themes/ResponsiveBaseTheme/Views/Parts.Map-Itinerario.cshtml
+++ b/src/Themes/ResponsiveBaseTheme/Views/Parts.Map-Itinerario.cshtml
@@ -47,7 +47,8 @@
     if (contents.Any()) {
         using (Script.Foot()) {
     <script type="text/javascript">
-        function @("initialize" + ID + "()") {
+        async function @("initialize" + ID + "()") {
+            const { Map } = await google.maps.importLibrary("maps");
             var bounds = new google.maps.LatLngBounds();
             var mapOptions = {
                 scaleControl: true,
@@ -57,13 +58,13 @@
             var locations = [
                 @Html.Raw(String.Join(",", locationsList))
             ];
-            var map = new google.maps.Map(document.getElementById('map_canvas-@ID'), mapOptions);
+            var map = new Map(document.getElementById('map_canvas-@ID'), mapOptions);
 
             var infowindow = new google.maps.InfoWindow();
 
             var marker, i;
 
-            for (i = 0; i < locations.length; i++) {  
+            for (i = 0; i < locations.length; i++) {
                 marker = new google.maps.Marker({
                     position: new google.maps.LatLng(locations[i][2], locations[i][3]),
                     map: map
@@ -87,7 +88,8 @@
             }
             map.fitBounds(bounds);
         }
-        google.maps.event.addDomListener(window, 'load', @("initialize" + ID) );
+        @("initialize" + ID + "();")
+        //google.maps.event.addDomListener(window, 'load', @("initialize" + ID) );
     </script>
         }
     <fieldset class="map">
