--- a/src/Themes/ResponsiveBaseTheme/Views/Parts.Map.cshtml
+++ b/src/Themes/ResponsiveBaseTheme/Views/Parts.Map.cshtml
@@ -14,7 +14,8 @@
     if (Model.Latitude > 0) {
         using (Script.Foot()) {
     <script type="text/javascript">
-        function @("initialize" + ID + "()") {
+        async function @("initialize" + ID + "()") {
+            const { Map } = await google.maps.importLibrary("maps");
             var mapOptions = {
             scaleControl: true,
             center: new google.maps.LatLng(@Model.Latitude.ToString().Replace(",", "."),@Model.Longitude.ToString().Replace(",", ".")),
@@ -43,7 +44,8 @@
         });
         infowindow.open(map, marker);
         }
-        google.maps.event.addDomListener(window, 'load', @("initialize" + ID) );
+        @("initialize" + ID + "();")
+        //google.maps.event.addDomListener(window, 'load', @("initialize" + ID) );
     </script>
         }
     <fieldset class="map">
