--- a/src/Modules/Laser.Orchard.CulturePicker/Views/CultureCookieScripts.cshtml
+++ b/src/Modules/Laser.Orchard.CulturePicker/Views/CultureCookieScripts.cshtml
@@ -23,7 +23,7 @@
                 var d = new Date();
                 d.setTime(d.getTime() + (28 * 24 * 60 * 60 * 1000)); //expires in 4 weeks
                 var expires = "expires=" + d.toGMTString();
-                document.cookie = "cultureData=" + cvalue + ";" + expires + ";path=/";
+                document.cookie = "cultureData=" + cvalue + ";secure;" + expires + ";path=/";
             }
         }
 
