made "Create New Item" text localizable

--- a/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Fields/ContentPickerCreateItem.Edit.cshtml
+++ b/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Fields/ContentPickerCreateItem.Edit.cshtml
@@ -12,7 +12,7 @@
 
 <div id="divCreateNewButton_@Model.nameCPField" class="divCreateNewButton">
     <div id="divCTNewButton_@Model.nameCPField" class="divCTNewButton">
-        <input type="button" value="Create New Item" id="selectContentTypeBtn_@Model.nameCPField" data-nameCPField="@Model.nameCPField" 
+        <input type="button" value="@T("Create New Item")" id="selectContentTypeBtn_@Model.nameCPField" data-nameCPField="@Model.nameCPField" 
                class="selectContentTypeBtn button"
                onclick="divCreateNewButton.onSelectCTClick.apply(this)" data-multiple="@Model.multiple" />
 
