--- a/src/Modules/Laser.Orchard.Maps/Views/EditorTemplates/Parts/Map.cshtml
+++ b/src/Modules/Laser.Orchard.Maps/Views/EditorTemplates/Parts/Map.cshtml
@@ -1,4 +1,6 @@
-﻿@using Orchard.MediaLibrary.Fields;
+﻿<!-- Laser.Orchard.Maps/EditorTemplates/Parts/Map -->
+
+@using Orchard.MediaLibrary.Fields;
 @using Laser.Orchard.Maps.Models;
     @model Laser.Orchard.Maps.ViewModels.MapEditModel
     @{
@@ -26,7 +28,7 @@
         } catch { }
     }
     @using (Script.Head()) {
-        Script.Require("GoogleMapsPlacesLib");
+        Script.Require("GoogleMapsAPIPlaces");
         Script.Require("LaserOrchardMaps");
 
         <style>
@@ -83,7 +85,9 @@
                 return false;
             }
 
-            function initialize() {
+            async function initialize() {
+                const { Map } = await google.maps.importLibrary("maps");
+
                 var mapOptions = {
                     center: new google.maps.LatLng(@Model.Map.Latitude.ToString().Replace(",", "."), @Model.Map.Longitude.ToString().Replace(",", ".")),
                     zoom: 13,
@@ -98,7 +102,7 @@
                 };
 
 
-                var map = new google.maps.Map(document.getElementById('maparea'),
+                var map = new Map(document.getElementById('maparea'),
                   mapOptions);
 
                 @if (httpTiles) {
@@ -227,7 +231,9 @@
             //    });
             //    ctaLayer.setMap(map);
             //}
-            google.maps.event.addDomListener(window, 'load', initialize);
+
+            initialize();
+            //google.maps.event.addDomListener(window, 'load', initialize);
         </script>
     }
     <fieldset>
