--- a/src/Themes/KrakeAdmin/Styles/krakeadmin.css
+++ b/src/Themes/KrakeAdmin/Styles/krakeadmin.css
@@ -171,9 +171,6 @@ fieldset.taxonomy-wrapper .expando-glyph {
 table.items {
   border-color: #dae7eb #dae7eb -moz-use-text-color !important; }
 
-.localmenu li.selected a {
-  color: #296e90 !important; }
-
 .widgets-listed li li.widgets-this-layer, #widgets-layer-visibility li.widgets-this-layer {
   background-color: #f5f5f5 !important; }
 
@@ -206,13 +203,6 @@ button.link {
 
 button.link:hover {
   text-decoration: underline; }
-
-.localmenu li.selected {
-  border-top: 4px solid #de625e !important;
-  border-left: 1px solid #de625e !important;
-  border-right: 1px solid #de625e !important;
-  border-bottom: 4px solid #fff !important;
-  border-radius: 5px 5px 0px 0px !important; }
 
 .local-section-content-types,
 .local-section-content-parts,
@@ -333,24 +323,31 @@ button.link:hover {
   -moz-appearance: none;
   min-width: 230px; }
 
-.localmenu li.middle, .localmenu li.last, .localmenu li.first {
-  -moz-border-left-colors: none;
-  -moz-border-right-colors: none;
-  -moz-border-top-colors: none;
-  border-color: #ee726f #ee726f #ee726f;
-  border-image: none;
-  border-style: solid solid solid;
-  border-width: 1px 1px medium;
-  border-radius: 5px 5px 0px 0px; }
-
 .localmenu li {
-  background-color: #fff; }
-
-.localmenu li:hover {
   background-color: #fff;
-  border-top: 4px solid #ee726f;
-  cursor: pointer;
-  border-radius: 5px 5px 0px 0px; }
+  font-size: inherit; }
+  .localmenu li.selected {
+    border-top: 4px solid #de625e !important;
+    border-left: 1px solid #de625e !important;
+    border-right: 1px solid #de625e !important;
+    border-bottom: 4px solid #fff !important;
+    border-radius: 5px 5px 0px 0px !important; }
+    .localmenu li.selected a {
+      color: #296e90 !important; }
+  .localmenu li.middle, .localmenu li.last, .localmenu li.first {
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    border-color: #ee726f #ee726f #ee726f;
+    border-image: none;
+    border-style: solid solid solid;
+    border-width: 1px 1px medium;
+    border-radius: 5px 5px 0px 0px; }
+  .localmenu li:hover {
+    background-color: #fff;
+    border-top: 4px solid #ee726f;
+    cursor: pointer;
+    border-radius: 5px 5px 0px 0px; }
 
 .localmenu-content-picker li {
   padding-bottom: 0.4em; }
