map.get => map-get

--- a/src/Modules/Laser.Orchard.jQueryPlugins/photo-sphere-viewer-5.1.6/core/index.scss
+++ b/src/Modules/Laser.Orchard.jQueryPlugins/photo-sphere-viewer-5.1.6/core/index.scss
@@ -359,10 +359,10 @@ $psv-overlay-zindex: 110 !default;
         margin-bottom: 4vh;
 
         svg {
-            width: map.get($psv-overlay-image-size, portrait);
+            width: map-get($psv-overlay-image-size, portrait);
 
             @media (orientation: landscape) {
-                width: map.get($psv-overlay-image-size, landscape);
+                width: map-get($psv-overlay-image-size, landscape);
             }
         }
     }
