Fixed check on null dates.

--- a/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts.Common.SummaryInfoFor_Edit.cshtml
+++ b/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts.Common.SummaryInfoFor_Edit.cshtml
@@ -20,13 +20,13 @@
     DateTime? modifiedUtc = Model == null ? null : Model.ModifiedUtc;
 
     string createdUtcStr = createdUtc == null ? "" : Convert.ToString(createdUtc);
-    DateTime createdLocal = Model == null ? DateTime.MinValue : Convert.ToDateTime(createdUtcStr, cultureInfo).ToLocalTime();
+    DateTime createdLocal = (string.IsNullOrWhiteSpace(createdUtcStr)) ? DateTime.MinValue : Convert.ToDateTime(createdUtcStr, cultureInfo).ToLocalTime();
 
     string publishedUtcStr = publishedUtc == null ? "" : Convert.ToString(publishedUtc);
-    DateTime publishedLocal = Model == null ? DateTime.MinValue : Convert.ToDateTime(publishedUtcStr, cultureInfo).ToLocalTime();
+    DateTime publishedLocal = (string.IsNullOrWhiteSpace(publishedUtcStr)) ? DateTime.MinValue : Convert.ToDateTime(publishedUtcStr, cultureInfo).ToLocalTime();
 
     string modifiedUtcStr = modifiedUtc == null ? "" : Convert.ToString(modifiedUtc);
-    DateTime modifiedLocal = Model == null ? DateTime.MinValue : Convert.ToDateTime(modifiedUtcStr, cultureInfo).ToLocalTime();
+    DateTime modifiedLocal = (string.IsNullOrWhiteSpace(modifiedUtcStr)) ? DateTime.MinValue : Convert.ToDateTime(modifiedUtcStr, cultureInfo).ToLocalTime();
 
     var contentItem = Model.ContentItem == null ? null : (ContentItem)Model.ContentItem;
 
