--- a/src/Modules/Laser.Orchard.StartupConfig/Styles/tinymce-enhancement.css
+++ b/src/Modules/Laser.Orchard.StartupConfig/Styles/tinymce-enhancement.css
@@ -3,4 +3,4 @@
   margin: 0 !important;
 }
 
-/*# sourceMappingURL=data:application/json;charset=utf-8,%7B%22version%22:3,%22sourceRoot%22:%22%22,%22sources%22:%5B%22file:///D:/pub/Laser.Orchard/Laser.Orchard.Platform/src/Modules/Laser.Orchard.StartupConfig/Assets/tinymce-enhancement.scss%22%5D,%22names%22:%5B%5D,%22mappings%22:%22AAAC;AAEG;EACI%22%7D */
+/*# sourceMappingURL=data:application/json;charset=utf-8,%7B%22version%22:3,%22sourceRoot%22:%22%22,%22sources%22:%5B%22file:///D:/Rilasci/Laser.Orchard/Laser.Orchard.Platform/src/Modules/Laser.Orchard.StartupConfig/Assets/tinymce-enhancement.scss%22%5D,%22names%22:%5B%5D,%22mappings%22:%22AAAC;AAEG;EACI%22%7D */
