--- a/src/Modules/Laser.Orchard.Policy/Views/PoliciesUser/ShowHistory.cshtml
+++ b/src/Modules/Laser.Orchard.Policy/Views/PoliciesUser/ShowHistory.cshtml
@@ -31,7 +31,7 @@
                     </td>
                     <td>@if (item.Accepted) {
                         <i class="fa fa-check-circle" style="color: green"></i> 
-                            if (item.PolicyType == null || acceptTypePolicy) {
+                            if (acceptTypePolicy) {
                         @T("Accepted")
                             }
                             else {
@@ -40,7 +40,7 @@
                         }
                         else {
                         <i class="fa fa-exclamation-triangle" style="color: red"></i> 
-                            if (item.PolicyType == null || acceptTypePolicy) {
+                            if (acceptTypePolicy) {
                         @T("Not Accepted")
                             }
                             else {
