- Convert img-responsive to img-fliud css classes - fixes bug on Datetime conversion

--- a/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts.Common.SummaryInfoFor_Edit.cshtml
+++ b/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Parts.Common.SummaryInfoFor_Edit.cshtml
@@ -19,13 +19,13 @@
     DateTime? publishedUtc = Model == null ? null : Model.PublishedUtc;
     DateTime? modifiedUtc = Model == null ? null : Model.ModifiedUtc;
 
-    string createdUtcStr = createdUtc == null ? "" : Convert.ToString(createdUtc);
+    string createdUtcStr = createdUtc == null ? "" : Convert.ToString(createdUtc, cultureInfo);
     DateTime createdLocal = (string.IsNullOrWhiteSpace(createdUtcStr)) ? DateTime.MinValue : Convert.ToDateTime(createdUtcStr, cultureInfo).ToLocalTime();
 
-    string publishedUtcStr = publishedUtc == null ? "" : Convert.ToString(publishedUtc);
+    string publishedUtcStr = publishedUtc == null ? "" : Convert.ToString(publishedUtc, cultureInfo);
     DateTime publishedLocal = (string.IsNullOrWhiteSpace(publishedUtcStr)) ? DateTime.MinValue : Convert.ToDateTime(publishedUtcStr, cultureInfo).ToLocalTime();
 
-    string modifiedUtcStr = modifiedUtc == null ? "" : Convert.ToString(modifiedUtc);
+    string modifiedUtcStr = modifiedUtc == null ? "" : Convert.ToString(modifiedUtc, cultureInfo);
     DateTime modifiedLocal = (string.IsNullOrWhiteSpace(modifiedUtcStr)) ? DateTime.MinValue : Convert.ToDateTime(modifiedUtcStr, cultureInfo).ToLocalTime();
 
     var contentItem = Model.ContentItem == null ? null : (ContentItem)Model.ContentItem;
