--- a/src/Themes/KrakeDefaultTheme/Views/Document.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/Document.cshtml
@@ -23,7 +23,7 @@
     //Styles    
     Style.Include("https://fonts.googleapis.com/css?family=Istok+Web").AtHead();
     Style.Include("https://fonts.googleapis.com/css?family=Roboto:400,700").AtHead();
-    Style.Include("bootstrap.min.css").AtHead(); //Bootstrap v3.3.6
+    Style.Require("Bootstrap").AtHead(); //Bootstrap, Orchard current version
     Style.Include("style.css").AtHead();
     Style.Include("toggle.css").AtHead();
     Style.Include("fonts/font-awesome-4.6.2/css/font-awesome.min.css").AtHead();
