--- a/src/Themes/KrakeDefaultTheme/Views/Elements/Image.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/Elements/Image.cshtml
@@ -14,6 +14,6 @@
         tagBuilder.Attributes["alt"] = T("Image not found").Text;
     }
     
-    tagBuilder.AddCssClass("img-responsive");
+    tagBuilder.AddCssClass("img-fluid");
 }
 @tagBuilder.ToHtmlString(TagRenderMode.SelfClosing)
