--- a/src/Themes/KrakeDefaultTheme/Views/Fields/MediaLibraryPicker.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/Fields/MediaLibraryPicker.cshtml
@@ -78,7 +78,7 @@
                             break;
                         case "Document":
                             <a class="thunb-media" href="@content.MediaUrl" title="@content.Title">
-                                <img class="img-responsive" src="@documentPath" alt="doc" />
+                                <img class="img-fluid" src="@documentPath" alt="doc" />
                             </a>
                             break;
                         case "Audio":
