--- a/src/Themes/KrakeDefaultTheme/Views/Layout.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/Layout.cshtml
@@ -92,9 +92,9 @@
             <div class="col-xs-12 col-md-4 text-center">
                 <a href="~/">
                     @if (!String.IsNullOrEmpty(backgroundImage)) {
-                        <img src="@backgroundImage" alt="logo" class="img-responsive" />
+                        <img src="@backgroundImage" alt="logo" class="img-fluid" />
                     } else {
-                        <img src="@subthemePath/images/logo.png" alt="logo" class="img-responsive" />}
+                        <img src="@subthemePath/images/logo.png" alt="logo" class="img-fluid" />}
                 </a>
             </div>
             <div class="col-xs-0 col-md-4"></div>
