--- a/src/Themes/KrakeDefaultTheme/Views/PlaceholderLogo.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/PlaceholderLogo.cshtml
@@ -33,7 +33,7 @@
     }
 }
 @if (!String.IsNullOrEmpty(whitelabelLogo)) {
-    <img src="@whitelabelLogo" alt="@tenantname" class="img-responsive" />
+    <img src="@whitelabelLogo" alt="@tenantname" class="img-fluid" />
 } else {
     <div class="placeholder-logo"></div>
 }
