--- a/src/Themes/KrakeDefaultTheme/Views/Register.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/Register.cshtml
@@ -28,7 +28,7 @@
 <div class="row">
     <div class="col-xs-12 col-sm-4 col-index">
         @if (File.Exists(Server.MapPath(whitelabelLogo))) {
-            <img src="@whitelabelLogo" alt="@tenantname" class="img-responsive" />
+            <img src="@whitelabelLogo" alt="@tenantname" class="img-fluid" />
         }
         else {
             <div class="placeholder-logo"></div>
