--- a/src/Themes/KrakeDefaultTheme/Styles/style.css
+++ b/src/Themes/KrakeDefaultTheme/Styles/style.css
@@ -403,55 +403,74 @@ label {
     overflow-x: hidden;
 }
 
-.thunb-img{
+.thunb-img {
     min-width: 200px;
-    min-width:200px;
+    min-width: 200px;
 }
 
-legend{
+legend {
     font-size: 24px;
     border-bottom: none;
     margin-bottom: 15px;
 }
 
-h3{
-    margin-bottom:15px;
+h3 {
+    margin-bottom: 15px;
 }
 
 /*field*/
-.name{
+.name {
     font-weight: bold;
     margin-top: 3px;
     margin-bottom: 3px;
 }
 
 /*projection paje*/
-.projection-page ul{
+.projection-page ul {
     list-style-type: none;
 }
 
 /*title summary content*/
-.borderTop{
-   border-top: 2px solid lightgray;
+.borderTop {
+    border-top: 2px solid lightgray;
 }
 
-.floatRight{
-    float:right;
+.floatRight {
+    float: right;
 }
 
-.EndSummaryContent{
+.EndSummaryContent {
     height: 22px;
     margin-bottom: 20px;
 }
 
 .map {
-    margin-bottom:20px;
+    margin-bottom: 20px;
 }
 
-.action-button{
+.action-button {
     width: auto !important;
 }
 
-ul{
+ul {
     list-style-type: none;
 }
+
+/*Bootstrap multi-level menu*/
+.dropdown-submenu {
+    position: relative;
+}
+
+    .dropdown-submenu a::after {
+        transform: rotate(-90deg);
+        position: absolute;
+        right: 6px;
+        top: .8em;
+    }
+
+    .dropdown-submenu .dropdown-menu {
+        top: 0;
+        left: 100%;
+        margin-left: .1rem;
+        margin-right: .1rem;
+    }
