--- a/src/Themes/KrakeDefaultTheme/Views/Document.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/Document.cshtml
@@ -29,8 +29,9 @@
     Style.Include("fonts/font-awesome-4.6.2/css/font-awesome.min.css").AtHead();
 
     //Scripts
-    Script.Include("jquery.min.js"); //jQuery v1.11.2 for compatibility with bootstrap 3 js
-    Script.Include("bootstrap.min.js").AtFoot(); //Bootstrap v3.3.6
+    Script.Require("JQuery"); //jQuery, Orchard current version
+    Script.Require("Bootstrap").AtFoot(); //Bootstrap, Orchard current version
+    Script.Include("krake.js").AtFoot(); //Theme custom js
 }
 
 <!DOCTYPE html>
