--- a/src/Themes/KrakeDefaultTheme/Views/LogOn.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/LogOn.cshtml
@@ -19,7 +19,7 @@
         <b>@T("Enter username and password")</b><br>
            @using (Html.BeginFormAntiForgeryPost(
 		Url.Action("LogOn", new { ReturnUrl = Request.QueryString["ReturnUrl"], @class = "login-form" }))) {
-            @Html.TextBox("userNameOrEmail", "", new { id = "form-username", autofocus = "autofocus", placeholder = "Username...", @class = "input-text form-control" })
+            @Html.TextBox("userNameOrEmail", "", new { id = "form-username", autocomplete = "off", autofocus = "autofocus", placeholder = "Username...", @class = "input-text form-control" })
             <div class="space-20"></div>
             @Html.Password("password", "", new { id = "form-password", autofocus = "autofocus", placeholder = "Password...", @class = "input-text form-control" })
            if (enableLostPassword) { @Html.ActionLink(T("Lost your Password?").Text, "RequestLostPassword", null, null, new { @class = "links" }) }
