Added scrollbar for layout editor toolbox

--- a/src/Themes/KrakeAdmin/Styles/krakeadmin.css
+++ b/src/Themes/KrakeAdmin/Styles/krakeadmin.css
@@ -11658,3 +11658,10 @@ body.mce-fullscreen #header {
 .tagit li.tagit-choice > a.tagit-close:before {
   content: " ";
 }
+
+/* Scroolbar for layout editor toolbox */
+.layout-editor > .layout-toolbox-wrapper {
+  max-height: calc(100vh - 80px);
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
