--- a/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
+++ b/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
@@ -11926,3 +11926,9 @@ body {
         }
     }
 }
+/* Scroolbar for layout editor toolbox */
+.layout-editor > .layout-toolbox-wrapper {
+    max-height: calc(100vh - 80px);
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
